Fix reset filters button on mobile

--- a/src/scss/components/_FiltersList.scss
+++ b/src/scss/components/_FiltersList.scss
@@ -26,6 +26,7 @@
         border: none;
         color: $red;
         cursor: pointer;
+        flex-basis: 100%;
         font-size: $default-size;
         font-weight: 500;
         margin-bottom: $padding;
